CollisionDetection WinText Problem

--- a/RPG/RPG.csproj
+++ b/RPG/RPG.csproj
@@ -68,6 +68,9 @@
     <None Update="Assest\Map Village.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Assest\MapCastle.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Assest\MapGrid.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
